[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/player.png" type="Texture" id=1]
[ext_resource path="res://src/player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/gift.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/images/player-powerup.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
height = 44.0

[node name="player" type="KinematicBody2D"]
collision_mask = 28
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="_colission" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="gift_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="powerup_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="powerup_timer" to="." method="_on_powerup_timer_timeout"]
